--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,17 @@ Package: multmod
 Title: Testing of multiple outcomes
 LazyLoad: yes
 LazyData: yes
-Version: 0.9
-Author: Christian B. Pipper <pipper@life.ku.dk>, Christian Ritz
+Version: 1.0
+Author: Christian B. Pipper <pipper@sund.ku.dk>, Christian Ritz
         <ritz@life.ku.dk>, Signe M. Jensen <smj@life.ku.dk>
-Maintainer: Christian B. Pipper <pipper@life.ku.dk>
+Maintainer: Christian B. Pipper <pipper@sund.ku.dk>
 Description: Testing of multiple outcomes using i.i.d. decompositions
 License: GPL (>= 2)
 Depends: R (>= 2.6.0), gtools, mvtnorm, sandwich, MASS, Rcpp
 LinkingTo: Rcpp
-Date: 2011-10-07
+Date: 2013-29-04
 URL: http://www.r-project.org
-Packaged: 2011-10-07 06:57:41 UTC; christianpipper
+Packaged: 2013-04-30 13:11:29 UTC; cxh739
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2011-10-08 06:44:38
+Date/Publication: 2013-05-02 13:20:51
